# sifbuilder

./: .gitignore  pyproject.toml
src/sifbuilder/: __init__.py  assembler.py  generate.py  list_current_software.py  main.py  sourceinfo.py  statusparser.py  subversion_parser.py
