[project]
name = "sifbuilder"
description = "TBD"
license = {text = "MIT" }
version = "2.0"
dependencies = [ 'pyyaml', 'python-debian', 'argparser_adapter',
]
requires-python= ">= 3.10"
readme = "README.md"
authors = [
    {name = "Gerard"},
    {email = "gweatherby@uchc.edu"}
]

[tool.setuptools]
package-dir = {"" = "src" }  # Tells setuptools that the root package is in the "src" directory

[tool.setuptools.packages.find]
where = ["src"]  # Specify the "src" directory to look for packages


[project.scripts]
sifbuilder = "sifbuilder.main:main"
sifassemble = "sifbuilder.assembler:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv.pip]
python-version = "3.12"

[[tool.uv.index]]
name = "nmrbox"
url = "https://apt.nmrbox.org/pip"
